// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`people > Elsa Fenn: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.108,
    0.467,
    0.177,
  ],
  "min": [
    -0.108,
    -0,
    -0.108,
  ],
  "triangles": 1200,
}
`;

exports[`people > Father Cuthwin: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.15,
    0.45,
    0.092,
  ],
  "min": [
    -0.142,
    -0,
    -0.092,
  ],
  "triangles": 1544,
}
`;

exports[`people > Garrick Fenn: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.142,
    0.45,
    0.092,
  ],
  "min": [
    -0.142,
    -0,
    -0.092,
  ],
  "triangles": 1336,
}
`;

exports[`people > Nan Wicket: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.108,
    0.466,
    0.164,
  ],
  "min": [
    -0.108,
    -0,
    -0.072,
  ],
  "triangles": 1560,
}
`;

exports[`people > Odo Pell: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.125,
    0.467,
    0.108,
  ],
  "min": [
    -0.125,
    -0,
    -0.108,
  ],
  "triangles": 1012,
}
`;

exports[`people > Tobin Harrow: builds, poses and keeps their shape 1`] = `
{
  "height": 0.45,
  "max": [
    0.142,
    0.45,
    0.172,
  ],
  "min": [
    -0.142,
    -0,
    -0.092,
  ],
  "triangles": 1760,
}
`;

exports[`people > Wat: builds, poses and keeps their shape 1`] = `
{
  "height": 0.414,
  "max": [
    0.115,
    0.414,
    0.084,
  ],
  "min": [
    -0.115,
    -0,
    -0.084,
  ],
  "triangles": 1368,
}
`;
